--- a/L20250408_2/L20250408_2.vcxproj
+++ b/L20250408_2/L20250408_2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c58f3a14-b213-4669-89c2-93e9cf1636e5}</ProjectGuid>
-    <RootNamespace>L20250408</RootNamespace>
+    <ProjectGuid>{728d7076-ea36-4e67-9d96-d56817641b21}</ProjectGuid>
+    <RootNamespace>L202504082</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Lotto.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
