--- a/L20250408_2/L20250408_2.vcxproj.filters
+++ b/L20250408_2/L20250408_2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lotto.cpp">
+    <ClCompile Include="Source.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
