--- a/L20250415_Class/L20250415_inheritance.vcxproj.filters
+++ b/L20250415_Class/L20250415_inheritance.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClCompile Include="Boar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Spawn.cpp">
+    <ClCompile Include="Character.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -59,7 +59,7 @@
     <ClInclude Include="Boar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Spawn.h">
+    <ClInclude Include="Character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
